...
                    .frame(height: 27)
                    .padding(.horizontal, 16)
                    .overlay(RoundedRectangle(cornerRadius: 6)
                        .stroke(Color.buttonBorderColor, lineWidth: 1))
            }
            .disabled(viewModel.tableDataModel.mode == .readonly)
            .accessibilityIdentifier("TableAddRowIdentifier")
        }
    }

    var rowTitle: String {
        "\(viewModel.tableDataModel.selectedRows.count) " + (viewModel.tableDataModel.selectedRows.count > 1 ? "rows": "row")
    }
...
                                        
                                        Image(systemName: "chevron.left")
                                            .foregroundStyle(viewModel.tableDataModel.shouldDisableMoveUp ? .gray : .blue)
                                    }
                                })
                                .disabled(viewModel.tableDataModel.shouldDisableMoveUp)
                                .accessibilityIdentifier("UpperRowButtonIdentifier")
                                
                                Spacer()
                                
                                Button(action: {
                                    viewModel.selectBelowRow()
                                    resetChanges()
...
                                                .frame(width: 27, height: 27)

                                            Image(systemName: "plus")
                                                .foregroundStyle(.blue)
                                        }
                                    })
                                    .accessibilityIdentifier("PlusTheRowButtonIdentifier")
                                }
                            } else {
                                Spacer()
                            }
                            
                            Button(action: {
...
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableTextRowFormView(cellModel: Binding.constant(cellModel),
                                                     formulaValue: viewModel.formulaValue(columnID: columnID, rowID: row),
                                                     isUsedForBulkEdit: isUsedForBulkEdit)
                                    .frame(minHeight: 40)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsTextFieldIdentifier")

                            case .dropdown:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableDropDownOptionListView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: isUsedForBulkEdit)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsDropdownFieldIdentifier")
...
                            case .barcode:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableBarcodeView(cellModel: Binding.constant(cellModel),
                                                 isUsedForBulkEdit: isUsedForBulkEdit, viewModel: viewModel)
                                    .frame(height: 40)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsBarcodeFieldIdentifier")
                            case .image:
                                let bindingCellModel = Binding<TableCellModel>(
                                    get: {
                                        return cellModel
                                    },
                                    set: { newValue in
...
                                    TableImageView(cellModel: bindingCellModel, isUsedForBulkEdit: isUsedForBulkEdit, viewModel: viewModel)
                                        .padding(.vertical, 4)
                                    Spacer()
                                }
                                .frame(minHeight: 40)
                                .cellBorder(isFocused: isFocused)
                                .accessibilityIdentifier("EditRowsImageFieldIdentifier")
                            case .signature:
                                let bindingCellModel = Binding<TableCellModel>(
                                    get: {
                                        return cellModel
                                    },
                                    set: { newValue in
...
                                    Spacer()
                                    TableSignatureView(cellModel: bindingCellModel, isUsedForBulkEdit: isUsedForBulkEdit)
                                    Spacer()
                                }
                                .frame(minHeight: 40)
                                .cellBorder(isFocused: isFocused)
                                .accessibilityIdentifier("EditRowsSignatureFieldIdentifier")
                            case .block:
                                if !isUsedForBulkEdit {
                                    columnTitle(col, isCellFilled: isEffectivelyFilled)
                                    TableBlockView(cellModel: Binding.constant(cellModel))
                                        .frame(minHeight: 40)
                                        .cellBorder(isFocused: isFocused)
...
