...
    var body: some View {
        if cellModel.viewMode == .quickView {
            Text(text)
                .lineLimit(1)
        } else {
            TextEditor(text: $text)
                .accessibilityIdentifier("TabelTextFieldIdentifier")
                .onChange(of: text) { newText in
                    if cellModel.data.title != text {
                        var editedCell = cellModel.data
                        editedCell.title = text
                        cellModel.didChange?(editedCell)
                    }
...
