...
        }, label: {
            Image(systemName: "signature")
                .foregroundColor(title.isEmpty ? .gray : colorScheme == .dark ? .white : .black)
                .frame(maxWidth: .infinity, alignment: .center)
                .contentShape(Rectangle())
        })
        .accessibilityIdentifier("TableSignatureOpenSheetButton")
        .sheet(isPresented: $showCanvasSignatureView, onDismiss: {
            isEditable = false
            cellModel.didFocusBlur?(.blur, cellModel.data)
        }) {
            CanvasSignatureView(lines: $lines, savedLines: $savedLines, signatureImage: $signatureImage, signatureURL: $title, showError: $showError, isEditable: $isEditable)
                .environment(\.footerContainer, FooterContainer())
...
